# othello

./: Cargo.toml  README.md
benches/: bench.rs
src/: board.rs  com.rs  error.rs  etc.rs  lib.rs  main.rs
src/board/: bitboard.rs
