[package]
name = "reversi"
version = "0.1.0"
authors = ["masan4444 <masanori0213@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
derive_more = "0.99.0"
clap = "2.33.3"
